practica_3/jcc_files/clike.java
/* Generated By:JavaCC: Do not edit this line. clike.java */
package traductor;
import java.io.*;
import lib.symbolTable.*;
import java.util.*;
import lib.symbolTable.exceptions.*;
import lib.errores.ErrorSemantico;

public class clike implements clikeConstants {

        protected static SymbolTable tablaSimbolos = new SymbolTable();

        public static void main(String[] args) {
                clike parser = null;

                try {
                        if(args.length == 0) {
                                parser = new clike(System.in);
                        }
                        else {
                                parser = new clike(new java.io.FileInputStream(args[0]));                       // 0 puede que sea el nombre del propio ejecutable, cuidado
                        }
                        //Programa es el símbolo inicial de la gramática
                        parser.Programa();
                        //...
                        System.out.println("***** An\u00e1lisis terminado con \u00e9xito *****");
                }
                catch (java.io.FileNotFoundException e) {
                        System.err.println ("Fichero " + args[0] + " no encontrado.");
                }
                catch (TokenMgrError e) {
                        System.err.println("LEX_ERROR: " + e.getMessage());
                }
                catch (ParseException e) {
                        System.err.println("PARSE_ERROR: " + e.getMessage());
                }
                catch (Exception e) {
                        System.err.println("ERROR: " + e.getMessage());
                }
        }

//------------ Símbolo inicial de la gramática. Para análisis léxico no hace falta más
  static final public void Programa() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tBOOL:
      case tCHAR:
      case tINT:
      case tVOID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declaracion();
    }
    jj_consume_token(0);
  }

  static final public void declaracion() throws ParseException {
        List<Symbol> simbolos;
    if (jj_2_1(3)) {
      declaracion_variables();
      jj_consume_token(tPC);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tBOOL:
      case tCHAR:
      case tINT:
      case tVOID:
        declaracion_func_proc();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void declaracion_variables() throws ParseException {
        Symbol.Types type;
        List<Symbol> symbols;
    type = tipo();
    symbols = ids(type);
                try {
                        for (Symbol simbolo : symbols)
                                tablaSimbolos.insertSymbol(simbolo);
                }
                catch (AlreadyDefinedSymbolException e){
                        System.out.println(e);
                }
  }

  static final public ArrayList<Symbol> ids(Symbol.Types type) throws ParseException {
        ArrayList<Symbol> symbols = null;
        Symbol symbol;
    symbol = decl_1_variable(type);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tCOMMA:
      jj_consume_token(tCOMMA);
      symbols = ids(type);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
                if (symbols == null)
                        symbols = new ArrayList<Symbol>();

                symbols.add(symbol);
                {if (true) return symbols;}
    throw new Error("Missing return statement in function");
  }

  static final public Symbol decl_1_variable(Symbol.Types type) throws ParseException {
        Token id;
        Token size = null;
    id = jj_consume_token(tID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tACOR:
      jj_consume_token(tACOR);
      size = jj_consume_token(tCONST_INT);
      jj_consume_token(tCCOR);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
                if (size != null)
                        {if (true) return new SymbolArray(id.image, 0, Integer.parseInt(size.image)-1, type);}
                else
                        {if (true) return Symbol.createNormalSymbol(id.image, type);}
    throw new Error("Missing return statement in function");
  }

  static final public void declaracion_func_proc() throws ParseException {
        Symbol.Types tipo;
        Token token;
        ArrayList<Symbol> parametros = null;
        Symbol simbolo;
    tipo = tipo();
    token = jj_consume_token(tID);
    jj_consume_token(tAP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tBOOL:
    case tCHAR:
    case tINT:
    case tVOID:
      parametros = declaracion_parametros();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(tCP);
                if (parametros == null)
                {
                        parametros = new ArrayList<Symbol>();
                }

                if (tipo == Symbol.Types.VOID)
                {
                        simbolo = new SymbolProcedure(token.image, parametros);
                }
                else
                {
                        simbolo = new SymbolFunction(token.image, parametros, tipo);
                }

                try{
                        tablaSimbolos.insertSymbol(simbolo);
                }
                catch (AlreadyDefinedSymbolException e){
                        System.out.println(e);
                }

                tablaSimbolos.insertBlock();

                for (Symbol simb : parametros)
                {
                        try{
                                tablaSimbolos.insertSymbol(simb);
                        }
                        catch (AlreadyDefinedSymbolException e) {
                                System.out.println(e+", simbolo "+simb);
                        }
                }
    bloque_codigo_con_variables();
                System.out.println("variables declaradas: ");
                System.out.println(tablaSimbolos);
                tablaSimbolos.removeBlock();
  }

  static final public ArrayList<Symbol> declaracion_parametros() throws ParseException {
        Symbol symbol;
        ArrayList<Symbol> parametros = new ArrayList<Symbol>();
    symbol = declaracion_parametro();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tCOMMA:
      jj_consume_token(tCOMMA);
      parametros = declaracion_parametros();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
                parametros.add(0, symbol);
                {if (true) return parametros;}
    throw new Error("Missing return statement in function");
  }

  static final public Symbol declaracion_parametro() throws ParseException {
        Symbol.Types type;
        Symbol symbol;
        Token ref = null;
    type = tipo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tREFER:
      ref = jj_consume_token(tREFER);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    symbol = decl_1_variable(type);
                if (ref != null)
                {
                        symbol.parClass = Symbol.ParameterClass.REF;
                        {if (true) return symbol;}
                }
                else
                {
                        symbol.parClass = Symbol.ParameterClass.VAL;
                        {if (true) return symbol;}
                }
    throw new Error("Missing return statement in function");
  }

  static final public void instruccion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tREAD:
      inst_leer();
      jj_consume_token(tPC);
      break;
    case tREADLN:
      inst_leer_linea();
      jj_consume_token(tPC);
      break;
    case tPRINT:
      inst_escribir();
      jj_consume_token(tPC);
      break;
    case tPRINTLN:
      inst_escribir_linea();
      jj_consume_token(tPC);
      break;
    default:
      jj_la1[7] = jj_gen;
      if (jj_2_2(2)) {
        inst_invoc_proc();
        jj_consume_token(tPC);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tID:
          inst_asignacion();
          jj_consume_token(tPC);
          break;
        case tIF:
          inst_seleccion();
          break;
        case tWHILE:
          inst_iteracion();
          break;
        case tRETURN:
          inst_return();
          jj_consume_token(tPC);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void inst_leer() throws ParseException {
        Token token;
        Symbol.Types type;
    jj_consume_token(tREAD);
    jj_consume_token(tAP);
    token = jj_consume_token(tID);
                try {
                        type = tablaSimbolos.getSymbol(token.image).type;
                }
                catch(SymbolNotFoundException e)
                {
                        type = Symbol.Types.UNDEFINED;
                        ErrorSemantico.deteccion(e, token);
                }

                if (type != Symbol.Types.INT && type != Symbol.Types.CHAR && type != Symbol.Types.BOOL)
                        ErrorSemantico.deteccion("En read(), la variable " + token.image + " no es de tipo entero, char, string o bool", token);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_2;
      }
      jj_consume_token(tCOMMA);
      token = jj_consume_token(tID);
                        try {
                                type = tablaSimbolos.getSymbol(token.image).type;
                        }
                        catch(SymbolNotFoundException e)
                        {
                                type = Symbol.Types.UNDEFINED;
                                ErrorSemantico.deteccion(e, token);
                        }

                        if (type != Symbol.Types.INT && type != Symbol.Types.CHAR && type != Symbol.Types.BOOL)
                                ErrorSemantico.deteccion("En read(), la variable " + token.image + " no es de tipo entero, char, string o bool", token);
    }
    jj_consume_token(tCP);
  }

  static final public void inst_leer_linea() throws ParseException {
        Token token;
        Symbol.Types type;
    jj_consume_token(tREADLN);
    jj_consume_token(tAP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tID:
      token = jj_consume_token(tID);
                try {
                        type = tablaSimbolos.getSymbol(token.image).type;
                }
                catch(SymbolNotFoundException e)
                {
                        type = Symbol.Types.UNDEFINED;
                        ErrorSemantico.deteccion(e, token);
                }

                if (type != Symbol.Types.INT && type != Symbol.Types.CHAR && type != Symbol.Types.BOOL)
                        ErrorSemantico.deteccion("En readln(), la variable " + token.image + " no es de tipo entero, char, string o bool", token);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMMA:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      jj_consume_token(tCOMMA);
      token = jj_consume_token(tID);
                try {
                        type = tablaSimbolos.getSymbol(token.image).type;
                }
                catch(SymbolNotFoundException e)
                {
                        type = Symbol.Types.UNDEFINED;
                        ErrorSemantico.deteccion(e, token);
                }

                if (type != Symbol.Types.INT && type != Symbol.Types.CHAR && type != Symbol.Types.BOOL)
                        ErrorSemantico.deteccion("En readln(), la variable " + token.image + " no es de tipo entero, char, string o bool", token);
    }
    jj_consume_token(tCP);
  }

  static final public void inst_escribir() throws ParseException {
    jj_consume_token(tPRINT);
    jj_consume_token(tAP);
    argumentos();
    jj_consume_token(tCP);
  }

  static final public void inst_escribir_linea() throws ParseException {
    jj_consume_token(tPRINTLN);
    jj_consume_token(tAP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tAP:
    case tMENOS:
    case tNOT:
    case tFALSE:
    case tTRUE:
    case tINT2CHAR:
    case tCHAR2INT:
    case tCONST_STRING:
    case tCONST_INT:
    case tCONST_CHAR:
    case tID:
      argumentos();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(tCP);
  }

  static final public void argumentos() throws ParseException {
    expresion();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMMA:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_4;
      }
      jj_consume_token(tCOMMA);
      expresion();
    }
  }

  static final public void inst_asignacion() throws ParseException {
        Symbol.Types symbolAss, symbolExp;
    symbolAss = asignable();
    jj_consume_token(tASSIGN);
    symbolExp = expresion();
                if (symbolAss != symbolExp)
                {
                        ErrorSemantico.deteccion("En asignaci\u00f3n, la expresi\u00f3n de tipo " + symbolExp + " no coincide con el tipo de la variable: "+symbolAss, token);
                }
  }

  static final public Symbol.Types asignable() throws ParseException {
        Symbol.Types index = null;
        Token token;
    token = jj_consume_token(tID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tACOR:
      jj_consume_token(tACOR);
      index = expresion();
      jj_consume_token(tCCOR);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
                if (index == null)
                {
                        {if (true) return tablaSimbolos.getSymbol(token.image).type;}
                }
                else // Nuestro simbolo forma parte de un vector
                {
                        if (index != Symbol.Types.INT)
                        {
                                ErrorSemantico.deteccion("En asignaci\u00f3n, el \u00edndice del vector " + token.image + " no es de tipo entero", token);
                        }

                        SymbolArray element = (SymbolArray) tablaSimbolos.getSymbol(token.image);

                        {if (true) return element.baseType;}
                }
    throw new Error("Missing return statement in function");
  }

  static final public void inst_seleccion() throws ParseException {
    jj_consume_token(tIF);
    jj_consume_token(tAP);
    expresion();
    jj_consume_token(tCP);
    bloque_codigo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tELSE:
      if (jj_2_3(2)) {
        bloque_else_ifs();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tELSE:
          jj_consume_token(tELSE);
          bloque_codigo();
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
  }

  static final public void bloque_else_ifs() throws ParseException {
    jj_consume_token(tELSE);
    jj_consume_token(tIF);
    jj_consume_token(tAP);
    expresion();
    jj_consume_token(tCP);
    bloque_codigo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tELSE:
      bloque_else_ifs();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

  static final public void inst_iteracion() throws ParseException {
    jj_consume_token(tWHILE);
    jj_consume_token(tAP);
    expresion();
    jj_consume_token(tCP);
    bloque_codigo();
  }

  static final public void bloque_codigo() throws ParseException {
    jj_consume_token(tIBLOQUE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tWHILE:
      case tIF:
      case tPRINT:
      case tPRINTLN:
      case tREAD:
      case tREADLN:
      case tRETURN:
      case tID:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_5;
      }
      instruccion();
    }
    jj_consume_token(tFBLOQUE);
  }

  static final public void bloque_codigo_con_variables() throws ParseException {
    jj_consume_token(tIBLOQUE);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tBOOL:
      case tCHAR:
      case tINT:
      case tVOID:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_6;
      }
      declaracion_variables();
      jj_consume_token(tPC);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tWHILE:
      case tIF:
      case tPRINT:
      case tPRINTLN:
      case tREAD:
      case tREADLN:
      case tRETURN:
      case tID:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_7;
      }
      instruccion();
    }
    jj_consume_token(tFBLOQUE);
  }

  static final public void inst_return() throws ParseException {
    jj_consume_token(tRETURN);
    expresion();
  }

  static final public Symbol.Types inst_invoc_proc() throws ParseException {
        Token token;
        Symbol.Types tipo = null;
    token = jj_consume_token(tID);
    jj_consume_token(tAP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tAP:
    case tMENOS:
    case tNOT:
    case tFALSE:
    case tTRUE:
    case tINT2CHAR:
    case tCHAR2INT:
    case tCONST_STRING:
    case tCONST_INT:
    case tCONST_CHAR:
    case tID:
      argumentos();
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(tCP);
                try{
                        Symbol SimboloDeFuncion = tablaSimbolos.getSymbol(token.image);
                        if (SimboloDeFuncion.type == Symbol.Types.PROCEDURE)
                        {
                                tipo = Symbol.Types.VOID;
                        }
                        else if (SimboloDeFuncion.type == Symbol.Types.FUNCTION)
                        {
                                SymbolFunction funcion = (SymbolFunction) SimboloDeFuncion;
                                tipo = funcion.returnType;
                        }
                        else
                        {
                                ErrorSemantico.deteccion("El identificador " + token.image + " no es una funci\u00f3n ni un procedimiento", token);
                        }
                }
                catch (SymbolNotFoundException e) {
                        System.out.println(e+", linea "+token.beginLine+", columna "+token.beginColumn);
                }

                {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public void operador_not() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tNOT:
      jj_consume_token(tNOT);
      break;
    case tMENOS:
      jj_consume_token(tMENOS);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
